--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-	</dependencies>
+
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-el</artifactId>
+            <version>9.0.65</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
